# screenbot

./: .gitignore  LICENSE  Makefile  README.md  actions.go  backend.go  colors.go  coordinates.go  geometry.go  go.mod  go.sum  input.go  match.go  movement.go  pyproject.toml  screen.go  screenbot.py  screenbot_cli.py  screenbot_test.go  test_screenbot.py
bots/: smelt_gold_necklaces.py
box/: bank-from-furnace.json  bank-slot-1.json  draynor-bank.json  draynor-furnace.json  inventory-slot-2.json  jagex-launcher.json  rs-compass.json  rs-desktop-icon.json  smelt-necklace.json
cmd/screenbot/: main.go
tests/: test_cli.py  test_screenbot.py
