[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "screenbot"
version = "0.1.0"
description = "Single-file PyAutoGUI and OpenCV helpers for screen automation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Phillip England" },
]
keywords = ["automation", "gui", "pyautogui", "opencv", "screenshots"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pillow>=10",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
]

[project.scripts]
screenbot = "screenbot:main"

[tool.hatch.build.targets.wheel]
py-modules = ["screenbot"]
