[project]
name = "screenbot"
version = "0.2.0"
description = "Python screen automation library and script-friendly inspection CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
]

[project.scripts]
screenbot = "screenbot_cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["screenbot.py", "screenbot_cli.py"]
